# Rivex

./: .gitignore  README.md  clientes_callix_dia25.csv  faxina.py  main.py  maxima_voip.csv  pyproject.toml
data_processing/: cleaner_api.py  cleaner_automation.py
output/: callix_20251222_100938.csv  callix_20251222_101125.csv  callix_20251222_103539.csv  callix_20251222_112511.csv
src/: main.py
src/api/: ipbox.py
src/api/rivex/: maxima_voip_api.py
src/automations/: erro_login.html  teste.py
src/automations/Callix/: callix.py  callix_token_db.py  callix_tokens.py  clientes_callix_dia1-12-2025.csv  clientes_callix_dia1.csv  clientes_callix_dia10-12-2025.csv  clientes_callix_dia11-12-2025.csv  clientes_callix_dia12-12-2025.csv  clientes_callix_dia15-12-2025.csv  clientes_callix_dia16-12-2025.csv  clientes_callix_dia17-12-2025.csv  clientes_callix_dia18-12-2025.csv  clientes_callix_dia2.csv  clientes_callix_dia20-12-2025.csv  clientes_callix_dia28-11-2025.csv  clientes_callix_dia3-12-2025.csv  clientes_callix_dia4-12-2025.csv  clientes_callix_dia5-12-2025.csv  clientes_callix_dia6-12-2025.csv  clientes_callix_dia8-12-2025.csv  clientes_callix_dia9-12-2025.csv
src/automations/MaximaVoip/: Dados_dia28.csv  dados_dia-1.csv  dados_sabado-29.csv  dados_sexta-28.csv  maxima_voip.py  maxima_voip_mensal.py  maxima_voip_requests.py
src/automations/agitel/: Agitel-17.csv  agitel.py
src/automations/gsolutions/: gsolutions.py  (+1 more)
src/data_processing/: gsolutions_cleaner.py
src/rivex.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_http.py
utils/: fast_selenium.py
(+49 files in other folders)
